--- a/Common/QuantConnect.csproj
+++ b/Common/QuantConnect.csproj
@@ -209,14 +209,11 @@
     <Compile Include="Interfaces\IJobQueueHandler.cs" />
     <Compile Include="Interfaces\IMapFileProvider.cs" />
     <Compile Include="Interfaces\IMessagingHandler.cs" />
+    <Compile Include="Interfaces\IOptimizer.cs" />
     <Compile Include="LocalTimeKeeper.cs" />
     <Compile Include="Market.cs" />
     <Compile Include="Notifications\Notification.cs" />
     <Compile Include="Notifications\NotificationManager.cs" />
-    <Compile Include="Optimizers\BisectOptimizer.cs" />
-    <Compile Include="Optimizers\GenericOptimizer.cs" />
-    <Compile Include="Optimizers\GridSearchOptimizer.cs" />
-    <Compile Include="Optimizers\IOptimizer.cs" />
     <Compile Include="Orders\CancelOrderRequest.cs" />
     <Compile Include="Orders\Fees\ConstantFeeModel.cs" />
     <Compile Include="Orders\Fees\InteractiveBrokersFeeModel.cs" />
